--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <div id="topo"><!--Inicio topo-->
 
             <div id="area-logo">
-                <h1>
+                <h1 class="logo">
                     <a href="">
                         Chalé Hotel
                     </a>
@@ -22,7 +22,17 @@
             </div>
 
              <div id="area-menu">
-                 menu
+                 <div id="conteudo-menu">
+                     <div id="menu-locais">
+                         <span class="locais">
+                            <a href="">Rio de Janeiro |</a>
+                            <a href="">Belo Horizonte |</a>
+                            <a href="">São Paulo</a>
+                         </span>
+                         <a class="reservar" href="">Reservar</a>
+                         <div style="clear: both;"></div>
+                     </div>
+                 </div>
              </div>
         </div><!--Fim topo-->
     </div><!--Fim container-->
