--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 </h1>
             </div>
 
-             <div id="area-menu">
+             <div id="area-menu"> <!--Inicio menu-->
                  <div id="conteudo-menu">
                      <div id="menu-locais">
                          <span class="locais">
@@ -32,8 +32,20 @@
                          <a class="reservar" href="">Reservar</a>
                          <div style="clear: both;"></div>
                      </div>
+
+                     <div id="menu">
+                        <ul id="navegacao">
+                            <li><a href="">Home</a></li>
+                            <li><a href="">História</a></li>
+                            <li><a href="">Imprensa</a></li>
+                            <li><a href="">Gastronomia</a></li>
+                            <li><a href="">Contato</a></li>
+                        </ul>
+
+                        <img class="depoimento" src="imagens/depoimento.png">
+                     </div>
                  </div>
-             </div>
+             </div><!--Fim Menu-->
         </div><!--Fim topo-->
     </div><!--Fim container-->
 
