--- a/index.html
+++ b/index.html
@@ -1,82 +1,144 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <link type="text/css" rel="stylesheet" href="css/estilos.css">
+    <link type="text/css" rel="stylesheet" href="css/estilos.css" />
     <title>Chalé Hotel</title>
-</head>
-<body>
+  </head>
+  <body>
+    <div id="container">
+      <!--Inicio container-->
+      <div id="topo">
+        <!--Inicio topo-->
 
-    <div id="container"><!--Inicio container-->
-        <div id="topo"><!--Inicio topo-->
+        <div id="area-logo">
+          <h1 class="logo">
+            <a href=""> Chalé Hotel </a>
+          </h1>
+        </div>
 
-            <div id="area-logo">
-                <h1 class="logo">
-                    <a href="">
-                        Chalé Hotel
-                    </a>
-                </h1>
+        <div id="area-menu">
+          <!--Inicio menu-->
+          <div id="conteudo-menu">
+            <div id="menu-locais">
+              <span class="locais">
+                <a href="">Rio de Janeiro |</a>
+                <a href="">Belo Horizonte |</a>
+                <a href="">São Paulo</a>
+              </span>
+              <a class="reservar" href="">Reservar</a>
+              <div style="clear: both"></div>
             </div>
 
-             <div id="area-menu"> <!--Inicio menu-->
-                 <div id="conteudo-menu">
-                     <div id="menu-locais">
-                         <span class="locais">
-                            <a href="">Rio de Janeiro |</a>
-                            <a href="">Belo Horizonte |</a>
-                            <a href="">São Paulo</a>
-                         </span>
-                         <a class="reservar" href="">Reservar</a>
-                         <div style="clear: both;"></div>
-                     </div>
+            <div id="menu">
+              <ul id="navegacao">
+                <li><a href="">Home</a></li>
+                <li><a href="">História</a></li>
+                <li><a href="">Imprensa</a></li>
+                <li><a href="">Gastronomia</a></li>
+                <li><a href="">Contato</a></li>
+              </ul>
 
-                     <div id="menu">
-                        <ul id="navegacao">
-                            <li><a href="">Home</a></li>
-                            <li><a href="">História</a></li>
-                            <li><a href="">Imprensa</a></li>
-                            <li><a href="">Gastronomia</a></li>
-                            <li><a href="">Contato</a></li>
-                        </ul>
-
-                        <img class="depoimento" src="imagens/depoimento.png">
-                     </div>
-                 </div>
-             </div><!--Fim Menu-->
-        </div><!--Fim topo-->
-
-        <div id="area-principal"><!--Inicio área Principal-->
-            <div class="conteudo">
-                <h2>
-                    Lorem Ipzum dolor sit amet consectetur!
-                </h2>
-                <p>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-                </p>
-                <p>
-                    Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem. Ut enim ad minima veniam
-                </p>
-                <p>
-                    Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem. Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur? Quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil molestiae consequatur, vel illum qui dolorem eum fugiat quo voluptas nulla pariatur
-                </p>
+              <img class="depoimento" src="imagens/depoimento.png" />
             </div>
-        </div><!--Fim Area Principal-->
+          </div>
+        </div>
+        <!--Fim Menu-->
+      </div>
+      <!--Fim topo-->
 
-        <div id="area-lateral"><!--Inicio lateral-->
-            <div class="conteudo">
+      <div id="area-principal">
+        <!--Inicio área Principal-->
+        <div class="conteudo">
+          <h2>Lorem Ipzum dolor sit amet consectetur!</h2>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+            eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim
+            ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
+            aliquip ex ea commodo consequat. Duis aute irure dolor in
+            reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
+            pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
+            culpa qui officia deserunt mollit anim id est laborum.
+          </p>
+          <p>
+            Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut
+            fugit, sed quia consequuntur magni dolores eos qui ratione
+            voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem
+            ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non
+            numquam eius modi tempora incidunt ut labore et dolore magnam
+            aliquam quaerat voluptatem. Ut enim ad minima veniam
+          </p>
+          <p>
+            Sed ut perspiciatis unde omnis iste natus error sit voluptatem
+            accusantium doloremque laudantium, totam rem aperiam, eaque ipsa
+            quae ab illo inventore veritatis et quasi architecto beatae vitae
+            dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit
+            aspernatur aut odit aut fugit, sed quia consequuntur magni dolores
+            eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est,
+            qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit,
+            sed quia non numquam eius modi tempora incidunt ut labore et dolore
+            magnam aliquam quaerat voluptatem. Ut enim ad minima veniam, quis
+            nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut
+            aliquid ex ea commodi consequatur? Quis autem vel eum iure
+            reprehenderit qui in ea voluptate velit esse quam nihil molestiae
+            consequatur, vel illum qui dolorem eum fugiat quo voluptas nulla
+            pariatur
+          </p>
+        </div>
+      </div>
+      <!--Fim Area Principal-->
+
+      <div id="area-lateral">
+        <!--Inicio lateral-->
+        <div class="conteudo">
+          <ul id="beneficios">
+            <li>
+              <a href="">
+                <img
+                  src="imagens/apartamento.jpg"
+                  width="150"
+                  alt="Apartamento"
+                />
+                <h3>Apartamento</h3>
                 <p>
-                    Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem. Ut enim ad minima veniam
+                  Sed ut perspiciatis undeatis unde omnis iste natus error sit
+                  voluptatem accusanti natus error sit voluptatem accusanti
                 </p>
-            </div>
-        </div><!--Fim lateral-->
+              </a>
+            </li>
 
-        <div id="rodape"><!--Inicio rodape-->
+            <li>
+              <a href="">
+                <img src="imagens/restaurante.jpg" width="150" alt="Piscina" />
+                <h3>Restaurante</h3>
+                <p>Sed ut perspiciatis unde omnis iste natatem accusanti</p>
+              </a>
+            </li>
 
-        </div><!--Fim rodape-->
-    </div><!--Fim container-->
+            <li>
+              <a href="">
+                <img src="imagens/Piscina.jpg" width="150" alt="Piscina" />
+                <h3>Piscina</h3>
+                <p>
+                  Sed ut perspiciatis unde omnissit voluptatem perspiciatis unde
+                  omnis iste natus error sit voluptatem accusanti accusanti
+                </p>
+              </a>
+            </li>
+          </ul>
+        </div>
+      </div>
+      <!--Fim lateral-->
 
-</body>
+      <div id="rodape">
+        <!--Inicio rodape-->
+        <span> &copy; Copyright 2000-2021 Chalé Hotel </span>
+      </div>
+      <!--Fim rodape-->
+    </div>
+    <!--Fim container-->
+  </body>
 </html>
